fix: font and spacing issues

--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -24,6 +24,7 @@
   --background-main: #e5e8f0;
 
   --text-color-black: #2d2e30;
+  --text-color-dark: #13452C;
 
   --color-shadow-grey: #0000004d;
   --color-shadow-grey-light: #00000033;
