--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300;400&family=Poppins:wght@200;300;500;600&display=swap');
-
 *,
 *::after,
 *::before {
@@ -15,9 +13,9 @@ html {
 
 body {
   font-family: Poppins, sans-serif;
-  font-weight: 300;
+  font-weight: 500;
   line-height: 1.6;
-  color: var(--text-color-black);
+  color: var(--text-color-dark);
   background-image: linear-gradient(
       to bottom right,
       var(--color-primary-light),
