--- a/src/sass/layout/_table.scss
+++ b/src/sass/layout/_table.scss
@@ -92,6 +92,7 @@
   &__title {
     justify-self: center;
     font-size: 3.5rem;
+    font-weight: 500;
     color: color-mix(in srgb, var(--color-primary-dark), var(--color-black) 40%);
 
     @media only screen and (max-width: $bp-largest) {
@@ -161,7 +162,7 @@
 
     &__win {
       font-size: 5rem;
-      font-weight: 600;
+      font-weight: 500;
       color: var(--color-grey-dark)
     }
   }
@@ -261,4 +262,3 @@
     font-size: 0;
   }
 }
-
